# SynteticCardDataset

./: pyproject.toml
syntetic_card_dataset/: generate_images.ipynb
