[project]
name = "syntetic-card-dataset"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imgaug (>=0.4.0,<0.5.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (==3.7.5)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "imutils (>=0.5.4,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
